2004-11-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c: Use 0 rather than NULL in initializing a union, to quiet
	gcc warnings.

2004-11-01  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_readbinary): Do not try to access Z coordinate
	data in 2D mode.

2004-10-31  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Fix incorrect indexing of 2D
	rotation matrix.

	* src/mousecmn.h: Remove trailing comma from enum definition.

	* src/color.c (cbtick_callback) src/graph3d.c (do_3dplot xtick_callback
	ytick_callback ztick_callback map3d_position plot3d_vectors)
	src/mouse.c (nearest_label_tag):
	DEC cc is much pickier about mixing (unsigned int) and (int) across
	function calls or call-backs. Clean up the parameter usage to allow
	compilation under DU 4.0

	* src/internal.c (f_concatenate f_sprintf): Provide fallback for 
	configurations that don't support snprintf().

2004-10-29  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Fix indentation level of terminal types when
	converted to pdf.  Add mention of string variables in the documentation
	for 'set label'.

	* src/gplt_x11.c (pr_exportselection) term/x11.trm:
	Add a test for X resource gnuplot*exportselection and disable exporting
	the plot windows to the X clipboard if it is set to "off" or "false".

	* NEWS: Catch up with recent work.

2004-10-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c docs/gnuplot.doc: Reset values of 'set size' and
	'set origin' after 'unset multiplot' to the values as they were at
	'set multiplot layout'.

2004-10-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open): initialize_user_spec() is needed whether or
	not the input mode is binary. Fixes bug reported under Windows.

2004-10-27  Ethan Merritt  <merritt@u.washington.edu>

	String variables - extra features
	---------------------------------
	Autoconversion of strings to numerical values if encountered during